--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_world">Test Git!</string>
     <string name="action_settings">Settings</string>
     <string name="button_add">NUEVA AREA</string>
+
+    <string name="todo_prompt">Enter todo details:</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
 </resources>
